# cloudflare-r2-queues-compression-example

./: Cargo.toml  diagram.excalidraw
.github/: .env
.github/workflows/: deploy.yml
common/: Cargo.toml
common/src/: lib.rs
compression-task/: Cargo.toml  wrangler.toml
compression-task/src/: lib.rs
server/: Cargo.toml  wrangler.toml
server/src/: lib.rs
server/tests/: test.rs
